--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,8 +9,8 @@ documentation = "https://docs.rs/reqwest"
 authors = ["Sean McArthur <sean@seanmonstar.com>"]
 readme = "README.md"
 license = "MIT OR Apache-2.0"
-edition = "2021"
-rust-version = "1.64.0"
+edition = "2024"
+rust-version = "1.93"
 autotests = true
 include = [
     "README.md",
@@ -19,6 +19,71 @@ include = [
     "LICENSE-MIT",
     "src/**/*.rs"
 ]
+
+[workspace]
+members = [".", "examples/wasm_github_fetch"]
+resolver = "3"
+
+[workspace.package]
+edition = "2024"
+rust-version = "1.93"
+
+[workspace.dependencies]
+base64 = "0.22"
+http = "1.4"
+url = "2.5"
+bytes = "1.11"
+futures-core = { version = "0.3.31", default-features = false }
+futures-util = { version = "0.3.31", default-features = false, features = ["alloc", "std"] }
+sync_wrapper = { version = "1.0", features = ["futures"] }
+serde = { version = "1.0", features = ["derive"] }
+serde_urlencoded = "0.7.1"
+serde_json = "1.0"
+mime_guess = { version = "2.0", default-features = false }
+encoding_rs = "0.8"
+http-body = "1"
+http-body-util = "0.1.3"
+hyper = { version = "1.8.1", default-features = false, features = ["http1", "http2", "client", "server"] }
+hyper-util = { version = "0.1.20", features = ["http1", "http2", "client", "client-legacy", "client-proxy", "server-auto", "server-graceful", "tokio"] }
+h2 = "0.4"
+log = "0.4.29"
+percent-encoding = "2.3"
+tokio = { version = "1.49", default-features = false, features = ["net", "time", "macros", "rt-multi-thread", "sync"] }
+tower = { version = "0.5.3", default-features = false, features = ["retry", "timeout", "util", "limit"] }
+tower-service = "0.3"
+tower-http = { version = "0.6.8", default-features = false, features = ["follow-redirect"] }
+pin-project-lite = "0.2.16"
+rustls-pki-types = { version = "1.14.0", features = ["std"] }
+mime = "0.3.17"
+hyper-tls = "0.6"
+native-tls-crate = { version = "0.2.16", package = "native-tls" }
+tokio-native-tls = "0.3.1"
+hyper-rustls = { version = "0.27.7", default-features = false, features = ["http1"] }
+rustls = { version = "0.24.0-dev.0", default-features = false }
+tokio-rustls = { version = "0.26.4", default-features = false }
+rustls-platform-verifier = "0.6"
+cookie_crate = { version = "0.18.1", package = "cookie" }
+cookie_store = "0.22.0"
+tokio-util = { version = "0.7.18", default-features = false, features = ["io"] }
+hickory-resolver = { version = "0.25", features = ["tokio"] }
+once_cell = "1.21"
+h3 = "0.0.8"
+h3-quinn = "0.0.10"
+quinn = { version = "0.11.9", default-features = false, features = ["runtime-tokio"] }
+futures-channel = "0.3"
+env_logger = "0.11"
+flate2 = "1.1.9"
+brotli_crate = { version = "8", package = "brotli" }
+zstd_crate = { version = "0.13", package = "zstd" }
+doc-comment = "0.3"
+js-sys = "0.3.85"
+wasm-bindgen = { version = "0.2.108", features = ["serde-serialize"] }
+wasm-bindgen-futures = "0.4.58"
+wasm-streams = "0.5"
+web-sys = { version = "0.3.85", features = ["AbortController", "AbortSignal", "Headers", "Request", "RequestInit", "RequestMode", "Response", "Window", "FormData", "Blob", "BlobPropertyBag", "ServiceWorkerGlobalScope", "RequestCredentials", "File", "ReadableStream", "RequestCache"] }
+wasm-bindgen-test = "0.3"
+num_cpus = "1.17"
+libc = "0"
 
 [package.metadata.docs.rs]
 all-features = true
@@ -42,7 +107,7 @@ default-tls = ["rustls"]
 
 http2 = ["dep:h2", "hyper/http2", "hyper-util/http2", "hyper-rustls?/http2"]
 
-rustls = ["__rustls-aws-lc-rs", "dep:rustls-platform-verifier", "__rustls"]
+rustls = ["dep:rustls-platform-verifier", "__rustls"]
 rustls-no-provider = ["dep:rustls-platform-verifier", "__rustls"]
 
 native-tls = ["__native-tls", "__native-tls-alpn"]
@@ -88,127 +153,138 @@ __tls = ["dep:rustls-pki-types", "tokio/io-util"]
 
 # Enables common rustls code.
 __rustls = ["dep:hyper-rustls", "dep:tokio-rustls", "dep:rustls", "__tls"]
-__rustls-aws-lc-rs = ["hyper-rustls?/aws-lc-rs", "tokio-rustls?/aws-lc-rs", "rustls?/aws-lc-rs", "quinn?/rustls-aws-lc-rs"]
+__rustls-aws-lc-rs = ["hyper-rustls?/aws-lc-rs", "tokio-rustls?/aws-lc-rs", "quinn?/rustls-aws-lc-rs"]
 
 # Enables common native-tls code.
 __native-tls = ["dep:hyper-tls", "dep:native-tls-crate", "__tls", "dep:tokio-native-tls"]
 __native-tls-alpn = ["native-tls-crate?/alpn", "hyper-tls?/alpn"]
 
 [dependencies]
-base64 = "0.22"
-http = "1.1"
-url = "2.4"
-bytes = "1.2"
-futures-core = { version = "0.3.28", default-features = false }
-futures-util = { version = "0.3.28", default-features = false, optional = true }
-sync_wrapper = { version = "1.0", features = ["futures"] }
+base64 = { workspace = true }
+http = { workspace = true }
+url = { workspace = true }
+bytes = { workspace = true }
+futures-core = { workspace = true }
+futures-util = { workspace = true, optional = true }
+sync_wrapper = { workspace = true }
 
 # Optional deps...
 
-serde = { version = "1.0", optional = true }
+serde = { workspace = true, optional = true }
 ## query/form
-serde_urlencoded = { version = "0.7.1", optional = true }
+serde_urlencoded = { workspace = true, optional = true }
 ## json
-serde_json = { version = "1.0", optional = true }
+serde_json = { workspace = true, optional = true }
 ## multipart
-mime_guess = { version = "2.0", default-features = false, optional = true }
+mime_guess = { workspace = true, optional = true }
 
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
-encoding_rs = { version = "0.8", optional = true }
-http-body = "1"
-http-body-util = "0.1.2"
-hyper = { version = "1.1", features = ["http1", "client"] }
-hyper-util = { version = "0.1.12", features = ["http1", "client", "client-legacy", "client-proxy", "tokio"] }
-h2 = { version = "0.4", optional = true }
-log = "0.4.17"
-percent-encoding = "2.3"
-tokio = { version = "1.0", default-features = false, features = ["net", "time"] }
-tower = { version = "0.5.2", default-features = false, features = ["retry", "timeout", "util"] }
-tower-service = "0.3"
-tower-http = { version = "0.6.8", default-features = false, features = ["follow-redirect"] }
-pin-project-lite = "0.2.11"
+encoding_rs = { workspace = true, optional = true }
+http-body = { workspace = true }
+http-body-util = { workspace = true }
+hyper = { workspace = true, features = ["http1", "client"] }
+hyper-util = { workspace = true, features = ["http1", "client", "client-legacy", "client-proxy", "tokio"] }
+h2 = { workspace = true, optional = true }
+log = { workspace = true }
+percent-encoding = { workspace = true }
+tokio = { workspace = true, features = ["net", "time"] }
+tower = { workspace = true, features = ["retry", "timeout", "util"] }
+tower-service = { workspace = true }
+tower-http = { workspace = true, features = ["follow-redirect"] }
+pin-project-lite = { workspace = true }
 
 # Optional deps...
-rustls-pki-types = { version = "1.9.0", features = ["std"], optional = true }
-mime = { version = "0.3.16", optional = true }
+rustls-pki-types = { workspace = true, optional = true }
+mime = { workspace = true, optional = true }
 
 # native-tls
-hyper-tls = { version = "0.6", optional = true }
-native-tls-crate = { version = "0.2.10", optional = true, package = "native-tls" }
-tokio-native-tls = { version = "0.3.0", optional = true }
+hyper-tls = { workspace = true, optional = true }
+native-tls-crate = { workspace = true, optional = true }
+tokio-native-tls = { workspace = true, optional = true }
 
 # default rustls
-hyper-rustls = { version = "0.27.0", default-features = false, optional = true, features = ["http1", "tls12"] }
-rustls = { version = "0.23.4", optional = true, default-features = false, features = ["std", "tls12"] }
-tokio-rustls = { version = "0.26", optional = true, default-features = false, features = ["tls12"] }
-rustls-platform-verifier = { version = "0.6", optional = true }
+hyper-rustls = { workspace = true, optional = true, features = ["http1"] }
+rustls = { workspace = true, optional = true }
+tokio-rustls = { workspace = true, optional = true }
+rustls-platform-verifier = { workspace = true, optional = true }
 
 ## cookies
-cookie_crate = { version = "0.18.0", package = "cookie", optional = true }
-cookie_store = { version = "0.22.0", optional = true }
+cookie_crate = { workspace = true, optional = true }
+cookie_store = { workspace = true, optional = true }
 
 ## stream
-tokio-util = { version = "0.7.9", default-features = false, features = ["io"], optional = true }
+tokio-util = { workspace = true, features = ["io"], optional = true }
 
 ## hickory-dns
-hickory-resolver = { version = "0.25", optional = true, features = ["tokio"] }
-once_cell = { version = "1.18", optional = true }
+hickory-resolver = { workspace = true, optional = true, features = ["tokio"] }
+once_cell = { workspace = true, optional = true }
 
 # HTTP/3 experimental support
-h3 = { version = "0.0.8", optional = true }
-h3-quinn = { version = "0.0.10", optional = true }
-quinn = { version = "0.11.1", default-features = false, features = ["runtime-tokio"], optional = true }
-futures-channel = { version = "0.3", optional = true }
+h3 = { workspace = true, optional = true }
+h3-quinn = { workspace = true, optional = true }
+quinn = { workspace = true, features = ["runtime-tokio"], optional = true }
+futures-channel = { workspace = true, optional = true }
 
 [target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
-env_logger = "0.10"
-hyper = { version = "1.1.0", default-features = false, features = ["http1", "http2", "client", "server"] }
-hyper-util = { version = "0.1.12", features = ["http1", "http2", "client", "client-legacy", "server-auto", "server-graceful", "tokio"] }
-serde = { version = "1.0", features = ["derive"] }
-flate2 = "1.0.13"
-brotli_crate = { package = "brotli", version = "8" }
-zstd_crate = { package = "zstd", version = "0.13" }
-doc-comment = "0.3"
-tokio = { version = "1.0", default-features = false, features = ["macros", "rt-multi-thread"] }
-futures-util = { version = "0.3.28", default-features = false, features = ["std", "alloc"] }
+env_logger = { workspace = true }
+hyper = { workspace = true, features = ["http1", "http2", "client", "server"] }
+hyper-util = { workspace = true, features = ["http1", "http2", "client", "client-legacy", "server-auto", "server-graceful", "tokio"] }
+serde = { workspace = true, features = ["derive"] }
+flate2 = { workspace = true }
+brotli_crate = { workspace = true }
+zstd_crate = { workspace = true }
+doc-comment = { workspace = true }
+tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
+futures-util = { workspace = true, features = ["std", "alloc"] }
 
 # wasm
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
-js-sys = "0.3.77"
-wasm-bindgen = "0.2.89"
-wasm-bindgen-futures = "0.4.18"
-wasm-streams = { version = "0.5", optional = true }
-
-[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
-version = "0.3.28"
-features = [
-    "AbortController",
-    "AbortSignal",
-    "Headers",
-    "Request",
-    "RequestInit",
-    "RequestMode",
-    "Response",
-    "Window",
-    "FormData",
-    "Blob",
-    "BlobPropertyBag",
-    "ServiceWorkerGlobalScope",
-    "RequestCredentials",
-    "File",
-    "ReadableStream",
-    "RequestCache"
-]
+js-sys = { workspace = true }
+wasm-bindgen = { workspace = true }
+wasm-bindgen-futures = { workspace = true }
+wasm-streams = { workspace = true, optional = true }
+web-sys = { workspace = true, features = ["AbortController", "AbortSignal", "Headers", "Request", "RequestInit", "RequestMode", "Response", "Window", "FormData", "Blob", "BlobPropertyBag", "ServiceWorkerGlobalScope", "RequestCredentials", "File", "ReadableStream", "RequestCache"] }
 
 [target.'cfg(target_arch = "wasm32")'.dev-dependencies]
-wasm-bindgen = { version = "0.2.89", features = ["serde-serialize"] }
-wasm-bindgen-test = "0.3"
+wasm-bindgen = { workspace = true, features = ["serde-serialize"] }
+wasm-bindgen-test = { workspace = true }
 
 [dev-dependencies]
-tower = { version = "0.5.2", default-features = false, features = ["limit"] }
-num_cpus = "1.0"
-libc = "0"
+tower = { workspace = true, features = ["limit"] }
+num_cpus = { workspace = true }
+libc = { workspace = true }
+
+[patch.crates-io]
+bumpalo = { git = "https://github.com/earthlings-dev/bumpalo.git" }
+futures-channel = { git = "https://github.com/earthlings-dev/futures-rs.git" }
+futures-core = { git = "https://github.com/earthlings-dev/futures-rs.git" }
+futures-sink = { git = "https://github.com/earthlings-dev/futures-rs.git" }
+futures-task = { git = "https://github.com/earthlings-dev/futures-rs.git" }
+futures-util = { git = "https://github.com/earthlings-dev/futures-rs.git" }
+getrandom = { git = "https://github.com/earthlings-dev/getrandom.git" }
+hyper-rustls = { git = "https://github.com/earthlings-dev/hyper-rustls.git" }
+percent-encoding = { git = "https://github.com/earthlings-dev/rust-url.git" }
+rustls-pki-types = { git = "https://github.com/earthlings-dev/pki-types.git" }
+rustls-platform-verifier = { git = "https://github.com/earthlings-dev/rustls-platform-verifier.git" }
+rustls = { git = "https://github.com/earthlings-dev/rustls.git" }
+rustls-aws-lc-rs = { git = "https://github.com/earthlings-dev/rustls.git" }
+rustls-ring = { git = "https://github.com/earthlings-dev/rustls.git" }
+rustls-webpki = { git = "https://github.com/earthlings-dev/rustls-webpki.git" }
+serde = { git = "https://github.com/earthlings-dev/serde.git" }
+serde_core = { git = "https://github.com/earthlings-dev/serde.git" }
+serde_derive = { git = "https://github.com/earthlings-dev/serde.git" }
+serde_json = { git = "https://github.com/earthlings-dev/json.git" }
+thiserror = { git = "https://github.com/earthlings-dev/thiserror.git" }
+thiserror-impl = { git = "https://github.com/earthlings-dev/thiserror.git" }
+tokio = { git = "https://github.com/earthlings-dev/tokio.git" }
+tokio-macros = { git = "https://github.com/earthlings-dev/tokio.git" }
+tokio-rustls = { git = "https://github.com/earthlings-dev/tokio-rustls.git" }
+tokio-util = { git = "https://github.com/earthlings-dev/tokio.git" }
+tracing = { git = "https://github.com/earthlings-dev/tracing.git" }
+tracing-core = { git = "https://github.com/earthlings-dev/tracing.git" }
+url = { git = "https://github.com/earthlings-dev/rust-url.git" }
+webpki-root-certs = { git = "https://github.com/earthlings-dev/webpki-roots.git" }
 
 [lints.rust]
 unexpected_cfgs = { level = "warn", check-cfg = ['cfg(reqwest_unstable)'] }
