--- a/examples/wasm_github_fetch/Cargo.toml
+++ b/examples/wasm_github_fetch/Cargo.toml
@@ -2,7 +2,8 @@
 name = "wasm"
 version = "0.1.0"
 authors = ["John Gallagher <john.willis.gallagher@gmail.com>"]
-edition = "2021"
+edition.workspace = true
+rust-version.workspace = true
 
 # Config mostly pulled from: https://github.com/rustwasm/wasm-bindgen/blob/master/examples/fetch/Cargo.toml
 
@@ -10,9 +11,8 @@ edition = "2021"
 crate-type = ["cdylib"]
 
 [dependencies]
-reqwest = {path = "../../"}
-serde = { version = "1.0.101", features = ["derive"] }
-serde_derive = "^1.0.59"
-wasm-bindgen-futures = "0.4.1"
-serde_json = "1.0.41"
-wasm-bindgen = { version = "0.2.51", features = ["serde-serialize"]  }
+reqwest = { path = "../../", version = "0.13.2" }
+serde = { workspace = true, features = ["derive"] }
+wasm-bindgen-futures = { workspace = true }
+serde_json = { workspace = true }
+wasm-bindgen = { workspace = true, features = ["serde-serialize"]  }
